@@ -1,3 +1,8 @@
+2016-02-21  Danilo Chang  <ray2501@gmail.com>
+
+    * generic/tclmdb.c: env_handle set_mapsize/set_maxreaders command
+      option add more check
+
 2016-02-19  Danilo Chang  <ray2501@gmail.com>
 
     * generic/tclmdb.c: Add more check in several commands option
